Ejemplos Bison+Flex/Ejemplo 3 - Declaración de Variables/obj/Ejemplo_DeclaracionVariables.output
Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: '\n'
    4     | sentenciaDeclaracion '\n'

    5 sentenciaDeclaracion: especificador_de_tipo lista_identificadores ';'
    6                     | error caracterDeCorte

    7 lista_identificadores: factorizacion_identificadorA
    8                      | factorizacion_identificadorA ',' lista_identificadores

    9 factorizacion_identificadorA: IDENTIFICADOR
   10                             | IDENTIFICADOR '=' expresion
   11                             | error

   12 especificador_de_tipo: "char"
   13                      | "int"
   14                      | "float"
   15                      | "double"

   16 expresion: NUM
   17          | error

   18 caracterDeCorte: ';'
   19                | '\n'


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4 19
',' (44) 8
';' (59) 5 18
'=' (61) 10
error (256) 6 11 17
NUM (258) 16
IDENTIFICADOR (259) 9 10
"char" (260) 12
"int" (261) 13
"float" (262) 14
"double" (263) 15


No terminales con las reglas donde aparecen

$accept (13)
    en la izquierda: 0
input (14)
    en la izquierda: 1 2, en la derecha: 0 2
line (15)
    en la izquierda: 3 4, en la derecha: 2
sentenciaDeclaracion (16)
    en la izquierda: 5 6, en la derecha: 4
lista_identificadores (17)
    en la izquierda: 7 8, en la derecha: 5 8
factorizacion_identificadorA (18)
    en la izquierda: 9 10 11, en la derecha: 7 8
especificador_de_tipo (19)
    en la izquierda: 12 13 14 15, en la derecha: 5
expresion (20)
    en la izquierda: 16 17, en la derecha: 10
caracterDeCorte (21)
    en la izquierda: 18 19, en la derecha: 6


estado 0

    0 $accept: . input $end
    1 input: .
    2      | . input line

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line
    3 line: . '\n'
    4     | . sentenciaDeclaracion '\n'
    5 sentenciaDeclaracion: . especificador_de_tipo lista_identificadores ';'
    6                     | . error caracterDeCorte
   12 especificador_de_tipo: . "char"
   13                      | . "int"
   14                      | . "float"
   15                      | . "double"

    $end      desplazar e ir al estado 2
    error     desplazar e ir al estado 3
    "char"    desplazar e ir al estado 4
    "int"     desplazar e ir al estado 5
    "float"   desplazar e ir al estado 6
    "double"  desplazar e ir al estado 7
    '\n'      desplazar e ir al estado 8

    line                   ir al estado 9
    sentenciaDeclaracion   ir al estado 10
    especificador_de_tipo  ir al estado 11


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    6 sentenciaDeclaracion: error . caracterDeCorte
   18 caracterDeCorte: . ';'
   19                | . '\n'

    '\n'  desplazar e ir al estado 12
    ';'   desplazar e ir al estado 13

    caracterDeCorte  ir al estado 14


estado 4

   12 especificador_de_tipo: "char" .

    $default  reduce usando la regla 12 (especificador_de_tipo)


estado 5

   13 especificador_de_tipo: "int" .

    $default  reduce usando la regla 13 (especificador_de_tipo)


estado 6

   14 especificador_de_tipo: "float" .

    $default  reduce usando la regla 14 (especificador_de_tipo)


estado 7

   15 especificador_de_tipo: "double" .

    $default  reduce usando la regla 15 (especificador_de_tipo)


estado 8

    3 line: '\n' .

    $default  reduce usando la regla 3 (line)


estado 9

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 10

    4 line: sentenciaDeclaracion . '\n'

    '\n'  desplazar e ir al estado 15


estado 11

    5 sentenciaDeclaracion: especificador_de_tipo . lista_identificadores ';'
    7 lista_identificadores: . factorizacion_identificadorA
    8                      | . factorizacion_identificadorA ',' lista_identificadores
    9 factorizacion_identificadorA: . IDENTIFICADOR
   10                             | . IDENTIFICADOR '=' expresion
   11                             | . error

    error          desplazar e ir al estado 16
    IDENTIFICADOR  desplazar e ir al estado 17

    lista_identificadores         ir al estado 18
    factorizacion_identificadorA  ir al estado 19


estado 12

   19 caracterDeCorte: '\n' .

    $default  reduce usando la regla 19 (caracterDeCorte)


estado 13

   18 caracterDeCorte: ';' .

    $default  reduce usando la regla 18 (caracterDeCorte)


estado 14

    6 sentenciaDeclaracion: error caracterDeCorte .

    $default  reduce usando la regla 6 (sentenciaDeclaracion)


estado 15

    4 line: sentenciaDeclaracion '\n' .

    $default  reduce usando la regla 4 (line)


estado 16

   11 factorizacion_identificadorA: error .

    $default  reduce usando la regla 11 (factorizacion_identificadorA)


estado 17

    9 factorizacion_identificadorA: IDENTIFICADOR .  [';', ',']
   10                             | IDENTIFICADOR . '=' expresion

    '='  desplazar e ir al estado 20

    $default  reduce usando la regla 9 (factorizacion_identificadorA)


estado 18

    5 sentenciaDeclaracion: especificador_de_tipo lista_identificadores . ';'

    ';'  desplazar e ir al estado 21


estado 19

    7 lista_identificadores: factorizacion_identificadorA .  [';']
    8                      | factorizacion_identificadorA . ',' lista_identificadores

    ','  desplazar e ir al estado 22

    $default  reduce usando la regla 7 (lista_identificadores)


estado 20

   10 factorizacion_identificadorA: IDENTIFICADOR '=' . expresion
   16 expresion: . NUM
   17          | . error

    error  desplazar e ir al estado 23
    NUM    desplazar e ir al estado 24

    expresion  ir al estado 25


estado 21

    5 sentenciaDeclaracion: especificador_de_tipo lista_identificadores ';' .

    $default  reduce usando la regla 5 (sentenciaDeclaracion)


estado 22

    7 lista_identificadores: . factorizacion_identificadorA
    8                      | . factorizacion_identificadorA ',' lista_identificadores
    8                      | factorizacion_identificadorA ',' . lista_identificadores
    9 factorizacion_identificadorA: . IDENTIFICADOR
   10                             | . IDENTIFICADOR '=' expresion
   11                             | . error

    error          desplazar e ir al estado 16
    IDENTIFICADOR  desplazar e ir al estado 17

    lista_identificadores         ir al estado 26
    factorizacion_identificadorA  ir al estado 19


estado 23

   17 expresion: error .

    $default  reduce usando la regla 17 (expresion)


estado 24

   16 expresion: NUM .

    $default  reduce usando la regla 16 (expresion)


estado 25

   10 factorizacion_identificadorA: IDENTIFICADOR '=' expresion .

    $default  reduce usando la regla 10 (factorizacion_identificadorA)


estado 26

    8 lista_identificadores: factorizacion_identificadorA ',' lista_identificadores .

    $default  reduce usando la regla 8 (lista_identificadores)
